--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["shioleap <shioleap@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+rand = "0.7"
 
 [dependencies.amethyst]
 version="0.13"
